# tauri-specta

./: Cargo.toml
examples/app/src-tauri/: Cargo.toml
examples/custom-plugin/app/src-tauri/: Cargo.toml
examples/custom-plugin/plugin/: Cargo.toml
