[package]
name = "tauri-specta-example-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"
publish = false

[build-dependencies]
tauri-build = { version = "2.0.0-beta.17", features = [] }

[dependencies]
serde_json = "1.0"
specta = { git = "https://github.com/jsimonrichard/specta", features = [
  "function",
] }
serde = { version = "1.0", features = ["derive"] }
tauri = { git = "https://github.com/jsimonrichard/tauri", branch = "jsimonrichard-dev-specta", features = [
] }
tauri-specta = { path = "../../../", features = ["typescript", "javascript"] }
tauri-plugin-os = "2.0.0-beta.3"
thiserror = "1.0.60"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
