[package]
name = "tauri-plugin-specta-example"
version = "0.0.0"
edition = "2021"
links = "tauri-plugin-specta-example"

[build-dependencies]
tauri-plugin = { git = "https://github.com/jsimonrichard/tauri", branch = "jsimonrichard-dev-specta", features = [
  "build",
] }

[dependencies]
tauri = { git = "https://github.com/jsimonrichard/tauri", branch = "jsimonrichard-dev-specta" }
rand = "0.8.5"
specta = { git = "https://github.com/jsimonrichard/specta" }
serde = "1"
tauri-specta = { path = "../../../", features = ["typescript"] }
